// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio render checked and disabled correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "auto",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 0.5,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="#1fb5ad"
      strokeWidth={2}
    />
    <circle
      cx={10}
      cy={10}
      fill="#1fb5ad"
      r={4}
    />
  </svg>
  <input
    checked={true}
    disabled={true}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render checked and hover correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "pointer",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 1,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="#1fb5ad"
      strokeWidth={2}
    />
    <circle
      cx={10}
      cy={10}
      fill="#1fb5ad"
      r={4}
    />
  </svg>
  <input
    checked={true}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render checked correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "pointer",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 1,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="#1fb5ad"
      strokeWidth={2}
    />
    <circle
      cx={10}
      cy={10}
      fill="#1fb5ad"
      r={4}
    />
  </svg>
  <input
    checked={true}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render checked, disabled and hover correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "auto",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 0.5,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="#1fb5ad"
      strokeWidth={2}
    />
    <circle
      cx={10}
      cy={10}
      fill="#1fb5ad"
      r={4}
    />
  </svg>
  <input
    checked={true}
    disabled={true}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render not checked and disabled correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "auto",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 0.5,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="grey"
      strokeWidth={2}
    />
  </svg>
  <input
    checked={false}
    disabled={true}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render not checked and hover correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "pointer",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 0.7,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="#1fb5ad"
      strokeWidth={2}
    />
  </svg>
  <input
    checked={false}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render not checked correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "pointer",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 1,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="grey"
      strokeWidth={2}
    />
  </svg>
  <input
    checked={false}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;

exports[`Radio render not checked, disabled and hover correctly 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  style={
    Object {
      "cursor": "auto",
      "height": 10,
      "outline": "none",
      "position": "relative",
      "width": 20,
    }
  }
  tabIndex={0}
>
  <svg
    baseProfile="full"
    height={20}
    style={
      Object {
        "opacity": 0.5,
        "position": "absolute",
      }
    }
    version="1.1"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#0000"
      r={8}
      stroke="grey"
      strokeWidth={2}
    />
  </svg>
  <input
    checked={false}
    disabled={true}
    id="test"
    name="test"
    onChange={[Function]}
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "position": "absolute",
        "width": 20,
      }
    }
    type="radio"
    value="test"
  />
</div>
`;
